# docs/swagger-output.json
@@ -336,15 +336,6 @@
     "/api/auth/me": {
       "get": {
         "description": "",
-        "parameters": [
-          {
-            "name": "authorization",
-            "in": "header",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -364,21 +355,15 @@
     "/api/auth/refresh-token": {
       "post": {
         "description": "",
-        "parameters": [
-          {
-            "name": "authorization",
-            "in": "header",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
         "responses": {
           "200": {
             "description": "OK"
           },
           "401": {
             "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
@@ -439,7 +424,28 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "isProfileComplete": {
+                  "gender": {
+                    "example": "any"
+                  },
+                  "qualifications": {
+                    "example": "any"
+                  },
+                  "experience": {
+                    "example": "any"
+                  },
+                  "address": {
+                    "example": "any"
+                  },
+                  "subjectsTaught": {
+                    "example": "any"
+                  },
+                  "socialMedia": {
+                    "example": "any"
+                  },
+                  "profilePic": {
+                    "example": "any"
+                  },
+                  "dob": {
                     "example": "any"
                   }
                 }
@@ -478,7 +484,34 @@
                   "role": {
                     "example": "any"
                   },
-                  "isProfileComplete": {
+                  "fullname": {
+                    "example": "any"
+                  },
+                  "phone": {
+                    "example": "any"
+                  },
+                  "gender": {
+                    "example": "any"
+                  },
+                  "qualifications": {
+                    "example": "any"
+                  },
+                  "experience": {
+                    "example": "any"
+                  },
+                  "address": {
+                    "example": "any"
+                  },
+                  "subjectsTaught": {
+                    "example": "any"
+                  },
+                  "socialMedia": {
+                    "example": "any"
+                  },
+                  "profilePic": {
+                    "example": "any"
+                  },
+                  "dob": {
                     "example": "any"
                   }
                 }
@@ -665,7 +698,28 @@
               "schema": {
                 "type": "object",
                 "properties": {
+                  "course": {
+                    "example": "any"
+                  },
                   "batchName": {
+                    "example": "any"
+                  },
+                  "startDate": {
+                    "example": "any"
+                  },
+                  "days": {
+                    "example": "any"
+                  },
+                  "time": {
+                    "example": "any"
+                  },
+                  "mode": {
+                    "example": "any"
+                  },
+                  "maxStrength": {
+                    "example": "any"
+                  },
+                  "description": {
                     "example": "any"
                   }
                 }
@@ -770,6 +824,24 @@
                 "properties": {
                   "title": {
                     "example": "any"
+                  },
+                  "subtitle": {
+                    "example": "any"
+                  },
+                  "description": {
+                    "example": "any"
+                  },
+                  "prerequisites": {
+                    "example": "any"
+                  },
+                  "fee": {
+                    "example": "any"
+                  },
+                  "duration": {
+                    "example": "any"
+                  },
+                  "syllabus": {
+                    "example": "any"
                   }
                 }
               }
@@ -794,6 +866,41 @@
         "responses": {
           "400": {
             "description": "Bad Request"
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "title": {
+                    "example": "any"
+                  },
+                  "subtitle": {
+                    "example": "any"
+                  },
+                  "description": {
+                    "example": "any"
+                  },
+                  "prerequisites": {
+                    "example": "any"
+                  },
+                  "fee": {
+                    "example": "any"
+                  },
+                  "duration": {
+                    "example": "any"
+                  },
+                  "syllabus": {
+                    "example": "any"
+                  },
+                  "teacher": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
           }
         }
       },
@@ -1014,6 +1121,16 @@
         }
       }
     },
+    "/api/teacher/course-application": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
     "/api/user/dashboard": {
       "get": {
         "description": "",
@@ -1036,6 +1153,35 @@
           },
           "409": {
             "description": "Conflict"
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "gender": {
+                    "example": "any"
+                  },
+                  "education": {
+                    "example": "any"
+                  },
+                  "guardian": {
+                    "example": "any"
+                  },
+                  "address": {
+                    "example": "any"
+                  },
+                  "dob": {
+                    "example": "any"
+                  },
+                  "subjects": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
           }
         }
       },
@@ -1067,6 +1213,24 @@
                     "example": "any"
                   },
                   "role": {
+                    "example": "any"
+                  },
+                  "gender": {
+                    "example": "any"
+                  },
+                  "education": {
+                    "example": "any"
+                  },
+                  "guardian": {
+                    "example": "any"
+                  },
+                  "address": {
+                    "example": "any"
+                  },
+                  "dob": {
+                    "example": "any"
+                  },
+                  "subjects": {
                     "example": "any"
                   }
                 }
@@ -1168,26 +1332,6 @@
         }
       }
     },
-    "/api/user/course/{id}": {
-      "get": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
     "/api/user/course/{id}/enroll": {
       "post": {
         "description": "",
@@ -1205,25 +1349,19 @@
           "default": {
             "description": ""
           }
-        }
-      }
-    },
-    "/api/user/course/{id}/unenroll": {
-      "delete": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "courseId": {
+                    "example": "any"
+                  }
+                }
+              }
             }
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": ""
           }
         }
       }
@@ -1308,6 +1446,20 @@
         "description": "",
         "parameters": [
           {
+            "name": "sortBy",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "sortOrder",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
             "name": "course",
             "in": "query",
             "schema": {
@@ -1336,7 +1488,7 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "batch": {
+                  "batchId": {
                     "example": "any"
                   }
                 }
@@ -1349,71 +1501,6 @@
     "/api/user/batch/my": {
       "get": {
         "description": "",
-        "parameters": [
-          {
-            "name": "page",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "limit",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "course",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "batchName",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "mode",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "startDate",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "endDate",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "sortBy",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "sortOrder",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
         "responses": {
           "default": {
             "description": ""
